--- a/Mine/Mine.iOS/Mine.iOS.csproj
+++ b/Mine/Mine.iOS/Mine.iOS.csproj
@@ -121,6 +121,11 @@
     <BundleResource Include="Resources\xamarin_logo%402x.png" />
     <BundleResource Include="Resources\xamarin_logo%403x.png" />
     <InterfaceDefinition Include="Resources\LaunchScreen.storyboard" />
+    <BundleResource Include="Resources\icon_add.png" />
+    <BundleResource Include="Resources\icon_cancel.png" />
+    <BundleResource Include="Resources\icon_delete.png" />
+    <BundleResource Include="Resources\icon_save.png" />
+    <BundleResource Include="Resources\icon_update.png" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -137,7 +142,7 @@
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <ItemGroup>
     <ProjectReference Include="..\Mine\Mine.csproj">
-      <Project>{346C8141-0518-4BA8-8B33-FB945E062DD4}</Project>
+      <Project>{222BB397-2262-433F-B67A-CF3D679BDFF0}</Project>
       <Name>Mine</Name>
     </ProjectReference>
   </ItemGroup>
